corpus/comments.txt
=====================================
Comment
=====================================

# hello

---

(source_file
 (comment))

=====================================
Comment after expr
=====================================

1 # hello

---

(source_file
 (expr (expr_simple (integer))) (comment))
